--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
-
 {
-  "name": "speedforce-updates",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.0.0"
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
+    "@fortawesome/free-regular-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@types/prismjs": "1.26.5",
+    "autoprefixer": "10.4.21",
+    "http-server": "14.1.1",
+    "image-size": "2.0.2",
+    "postcss": "8.5.6",
+    "pptxgenjs": "4.0.0",
+    "prismjs": "1.30.0",
+    "sharp": "0.34.1",
+    "tailwindcss": "4.1.10",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3"
   }
 }
